# NLP-completing-sentence

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  README_HF.md  app_hf.py  docker-compose.yml  packages.txt  pyproject.toml  requirements-docker.txt  requirements-local.txt  requirements.txt  setup.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: main.py
app/core/: config.py  constants.py  exceptions.py  feature_flags.py  health_checker.py  logging.py  middleware.py  rate_limiter.py  request_logger.py  startup_checks.py
app/schemas/: analytics.py  prediction.py
app/services/: model_service.py
app/utils/: cache.py  helpers.py  input_validator.py  intent_formatter.py  metrics_formatter.py  response_builder.py  response_formatter.py  session_manager.py  text_cleaner_utils.py  text_utils.py  ticket_generator.py
configs/: api_config.yaml  app_config.yaml  departments.yaml  intent_config.yaml  logging_config.yaml  model_config.yaml  monitoring_config.yaml  priority_rules.yaml  sentiment_config.yaml  training_config.yaml
data/: README.md  generate_dataset.py
ml/evaluation/: __init__.py  confusion_analyzer.py  evaluator.py  metrics_tracker.py  model_comparator.py  performance_monitor.py  threshold_analyzer.py
notebooks/: 01_eda.py  04_batch_prediction_demo.py  05_confidence_analysis.py  06_error_analysis.py  07_threshold_analysis.py  08_sentiment_routing_demo.py  09_pipeline_demo.py  10_log_analysis.py
streamlit_app/: app.py
(+75 files in other folders)
